Thu Nov 13 10:11:48 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicb-21): Fix comment which described a behavior
	which no longer exists.

Wed Nov 12 16:24:45 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	Clean up infrastructure made unnecessary by RCS library:
	* rcscmds.c (diff_exec, diff_execv): Use literal "diff" not DIFF.
	* options.h.in (DIFF), rcs.h (RCS, RCS_CI, RCS_DIFF,
	RCS_RCSMERGE): Removed; no longer used.
	* commit.c (commit), patch.c (patch_fileproc),
	rcscmds.c (RCS_exec_rcsdiff), start of rcscmds.c: Update comments
	to reflect librarification of RCS.
	* options.h.in (RCSBIN_DFLT): Removed.
	* main.c, cvs.h (Rcsbin, free_Rcsbin): Removed.
	* main.c (main): Don't check RCSBIN environment variable.  -b
	global option is now a noop.
	* cvs.h (RCSBIN_ENV): Removed.
	* expand_path.c (expand_variable): $RCSBIN is now an error.
	* mkmodules.c (config_contents): Remove RCSBIN.
	* parseinfo.c (parse_config): RCSBIN now a noop.
	* server.c (server): Don't put Rcsbin in PATH.

Mon, 10 Nov 1997  Jim Kingdon

	* rcs.c (RCS_checkin): Actually, when we get a change text
	for a text file using get_file, we want text mode, although
	the reasons are kind of subtle (see comment).

	* rcs.c (RCS_checkin): Pass correct mode to get_file for
	binary files.

	* rcscmds.c: Declare vasprintf.

Mon Nov 10 11:11:17 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	This fixes problems with windows-NT/run.c improperly quoting, and
	is cleaner anyway.
	* rcscmds.c (call_diff_setup, call_diff_arg, call_diff_add_arg,
	call_diff_argv, call_diff_argc, call_diff_argc_allocated): New
	functions/variables, lightly adapted from src/run.c.
	* cvs.h, run.c (call_diff, call_diff3): Move from here...
	* rcscmds.c: ...to here.

Sun, 9 Nov 1997  Jim Kingdon

	* rcs.c (rcs_internal_unlockfile): Call rename_file not rename.
	This makes it work on NT again.

Sun Nov  9 16:54:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
